# substrate

./: .env.template  .gitignore  .mcp.json  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  docker-compose.yml  package-lock.json  pyproject.toml
.claude/agents/: calendar.md  crm.md  email.md  events.md  notes.md  tasks.md
docs/: ARCHITECTURE.md
habitat/: Dockerfile
habitat/internal/server/: handlers.go
substrate/: __init__.py
substrate/core/: config.py
substrate/core/db/: connection.py  migrate.py
substrate/core/sql/: 001_rls.sql
substrate/core/worker/: Dockerfile  main.py  registry.py  schedulers.py
substrate/domains/: __init__.py
substrate/domains/auth/: __init__.py  tools.py
substrate/domains/calendar/: README.md  __init__.py  tasks.py  tools.py
substrate/domains/crm/: __init__.py  tools.py
substrate/domains/email/: __init__.py  tools.py
substrate/domains/events/: __init__.py  actions.py  logic.py  router.py  tasks.py  tools.py
substrate/domains/notes/: __init__.py  embeddings.py  logic.py  tools.py
substrate/domains/tasks/: __init__.py  tools.py
substrate/integrations/: __init__.py
substrate/integrations/obsidian/: git.py  scheduler.py  sync.py  task_sync.py  tasks.py  writeback.py
substrate/integrations/resend/: __init__.py  client.py  scheduler.py  tasks.py
substrate/ui/api/: Dockerfile  main.py
substrate/ui/chat/: agent.py  tools.py  workspace.py
substrate/ui/mcp/: __init__.py  server.py
substrate/ui/web/: calendar.html  cards.html  chat.html  crud.html  dashboard.html  hud.css  kanban.html
(+12 files in other folders)
